--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -13,7 +13,8 @@
 // Any additional imported files //
  @import "theme/devstyles";  // <--------- scratchpad for css templates DELETE BEFORE STAGING
  @import "theme/canvas"; //<---------------css staging for invididual elements
+ @import "theme/partials/vertical_styles"; 
  @import "theme/atomicmouse";  // <--------- Add your styles into this file
-  @import "theme/global";//<-------combo css selectors broken out for easy reference while styleing
+ @import "theme/partials/global_styles";//<-------combo css selectors broken out for easy reference while styleing
 
 
