--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -35,7 +35,7 @@ $min_width:                 200;
 $max_width:                 3000;
 // These values represent the range of font-size to apply
 // These values effect the base font-size, headings and other elements will scale proportionally
-$min_font:                  12;
+$min_font:                  10;
 $max_font:                  20; 
 
 :root { font-size: #{$min_font}px; }
@@ -54,28 +54,28 @@ $max_font:                  20;
 // ==========================================================================
 // Modular Scale Variables
 // ==========================================================================
-// $modularscale: (base: 1rem, ratio: 1.33);
+$modularscale: (base: 1rem, ratio: 1.33);
 
 
-$modularscale: (
-  base: 1rem,
-  ratio: 1.33,
-  576px: (  
-    ratio: 1.3,
-  ),
-  768px: (
-    base: 1.25rem,
-    ratio: 1.3,
-  ),
-  992px: (
-    base: 1rem,
-    ratio: 1.3,
-  ),
-  1200px: (
-    base: 1rem,
-    ratio: 1.3,
-  ),
-);
+// $modularscale: (
+//   base: 1rem,
+//   ratio: 1.33,
+//   576px: (  
+//     ratio: 1.3,
+//   ),
+//   768px: (
+//     base: 1.25rem,
+//     ratio: 1.3,
+//   ),
+//   992px: (
+//     base: 1rem,
+//     ratio: 1.3,
+//   ),
+//   1200px: (
+//     base: 1rem,
+//     ratio: 1.3,
+//   ),
+// );
 
 
 
